<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/topheader"
            layout="@layout/customappbar" />

        <LinearLayout
            android:layout_margin="5dp"
            android:id="@+id/ll_roll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/topheader"
            android:orientation="vertical">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/column_name"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:id="@+id/tv_lot_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_roll_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/pallet"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_qty_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/rolls"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_article_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/meters"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/transfered"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
            </LinearLayout>

            <ListView
                android:id="@+id/listview_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/listbg" />
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>