<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">
        <!--top-->

        <include
            android:id="@+id/topheader"
            layout="@layout/customappbar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/tv_scan_pallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text="@string/pallet_scan"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/shiftspinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_scan_pallet"
                android:layout_margin="10dp"
                android:background="@drawable/roundbutton"
                android:padding="10dp"
                android:textColor="#070707" />

            <EditText
                android:id="@+id/edit_pallet_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/shiftspinner"
                android:layout_margin="10dp"
                android:background="@drawable/roundbutton"
                android:hint="@string/pallet_no"
                android:inputType="number"
                android:padding="16dp" />

            <Button
                android:id="@+id/btn_proceed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_pallet_no"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:background="@drawable/roundbuttonxml"
                android:gravity="center"
                android:paddingLeft="70dp"
                android:paddingTop="10dp"
                android:paddingRight="70dp"
                android:paddingBottom="10dp"
                android:text="@string/add_rolls"
                android:textColor="#F4FAFB"
                android:visibility="gone" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/appbarColor"
                app:itemBackground="@color/appbarColor"
                app:itemIconTint="@android:color/white"
                app:itemTextColor="@android:color/white"
                app:menu="@menu/bottom_nav_menu" />

            <!-- <com.luseen.spacenavigation.SpaceNavigationView
                 android:id="@+id/space"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 app:active_centre_button_background_color="@color/buttonColor"
                 app:centre_button_color="@color/buttonColor"
                 app:layout_behavior="com.luseen.spacenavigation.SpaceNavigationViewBehavior"
                 app:space_background_color="@color/appbarColor" />
 -->
        </RelativeLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>