<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">
        <!--top-->

        <include
            android:id="@+id/topheader"
            layout="@layout/customappbar" />

        <RelativeLayout
            android:id="@+id/surface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/roundbutton"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tv_show_pallet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/pallet_no"
                        android:textColor="@color/black"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_show_shift"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="center"
                        android:text="Shift"
                        android:textColor="@color/black"
                        android:textSize="18dp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"

                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edit_pallet_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/roundbutton"
                        android:hint="@string/rolls_no"
                        android:inputType="text"
                        android:padding="16dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"

                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edit_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/roundbutton"
                        android:hint="@string/weight"
                        android:inputType="number"
                        android:padding="16dp"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/btn_save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@drawable/roundbuttonxml"
                        android:gravity="center"
                        android:paddingLeft="70dp"
                        android:paddingTop="10dp"
                        android:paddingRight="70dp"
                        android:paddingBottom="10dp"
                        android:text="Send Data"
                        android:textColor="#F4FAFB"
                        android:visibility="gone" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/btn_save">

                        <ProgressBar
                            android:id="@+id/progressBar1"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerInParent="true"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center_horizontal"
                            android:indeterminate="true"
                            android:indeterminateDrawable="@drawable/customprogressbar"
                            android:visibility="gone" />

                        <RelativeLayout
                            android:id="@+id/rl_fetch_data"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="5dp"
                                    android:padding="5dp"
                                    android:text="@string/article"
                                    android:textColor="@color/black"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/tv_fetch_article"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="5dp"
                                    android:padding="5dp"
                                    android:text="@string/article"
                                    android:textColor="@color/black"
                                    android:textSize="15sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:orientation="vertical">

                                <TextView

                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="5dp"
                                    android:padding="5dp"
                                    android:text="@string/qty_mtr"
                                    android:textColor="@color/black"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/tv_fetch_qty"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="5dp"
                                    android:padding="5dp"
                                    android:text="@string/qty_mtr"
                                    android:textAlignment="textEnd"
                                    android:textColor="@color/black"
                                    android:textSize="15sp" />
                            </LinearLayout>

                        </RelativeLayout>
                    </RelativeLayout>

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/bottmvalue"
            android:layout_below="@id/surface"
            android:padding="5dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textViewpallet_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/pallet_no"
                        android:textColor="@color/black"
                        android:textSize="17dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewroll_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_toEndOf="@id/textViewpallet_no"
                        android:layout_toRightOf="@id/textViewpallet_no"
                        android:layout_weight="1"
                        android:text="@string/rolls_no"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewstatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:text="@string/status"
                        android:textColor="@color/black"
                        android:textSize="17dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <ListView

                    android:id="@+id/pending_listview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bottmvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation_pallet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/appbarColor"
                app:itemBackground="@color/appbarColor"
                app:itemIconTint="@android:color/white"
                app:itemTextColor="@android:color/white"
                app:menu="@menu/bottom_nav_menu_pallet" />
        </RelativeLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>